  logic.

Changes:
* SyGuS: Removed support for SyGuS-IF 1.0.
* Removed Java and Python bindings for the legacy API
* Interactive shell: the GPL-licensed Readline library has been replaced the
  BSD-licensed Editline. Compiling with `--best` now enables Editline, instead
  of Readline. Without selecting optional GPL components, Editline-enabled CVC4
  builds will be BSD licensed.
* The `competition` build type includes the dependencies used for SMT-COMP by
  default. Note that this makes this build type produce GPL-licensed binaries.

Changes since 1.7
=================

New Features:
* New C++ and Python API: CVC4 has a new, more streamlined API. We plan to
  make CVC4 1.8 the last version that ships with the legacy API.
* Strings: Full support of the new SMT-LIB standard for the theory of strings,
  including:
  * Support for `str.replace_re`, `str.replace_re_all`, `str.is_digit`,
    `str.from_code`, `re.diff`, and `re.comp`
  * Support for new operator names (e.g. `str.in_re` instead of `str.in.re`),
    new escape sequences. The new syntax is enabled by default for smt2 files.
* Support for syntax-guided synthesis (SyGuS) problems in the new API. C++
  examples of the SyGuS API can be found in `./examples/api/sygus_*.cpp`.
* Support for higher-order constraints. This includes treating function sorts
  (constructible by `->`) as first-class sorts and handling partially applied
  function symbols. Support for higher-order constraints can be enabled by
  the option `--uf-ho`.
* Support for set comprehension binders `comprehension`.
* Eager bit-blasting: Support for SAT solver Kissat.

Improvements:
* API: Function definitions can now be requested to be global. If the `global`
  parameter is set to true, they persist after popping the user context.
* Java/Python bindings: The bindings now allow users to catch exceptions
* Arithmetic: Performance improvements
  * Linear solver: New lemmas inspired by unit-cube tests
  * Non-linear solver: Expanded set of axioms